fix: add missing background button color variable for consistency

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,6 +6,7 @@
   --color-adultdesu-background-hover: #e34265;
   --color-adutldesu-dark-hover: #2b2b2b;
   --color-adultdesu-backgroundfooter: #1c1c1c;
+  --color-adultdesu-backgroundbutton: #222222;
   --text-size-super-xs: 9px;
 }
 
